--- a/Sling/React-redux-Projects/MyWebsite/package.json
+++ b/Sling/React-redux-Projects/MyWebsite/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "classnames": "^2.2.6",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.0",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.48.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
