--- a/Sling/React-redux-Projects/MyWebsite/package.json
+++ b/Sling/React-redux-Projects/MyWebsite/package.json
@@ -18,6 +18,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.48.0",
     "styled-components": "^5.3.3",
+    "typescript": "4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -42,6 +43,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
     ]
   }
 }
